--- a/assignment2/BatchNormalization.ipynb
+++ b/assignment2/BatchNormalization.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Batch Normalization\n",
     "One way to make deep networks easier to train is to use more sophisticated optimization procedures such as SGD+momentum, RMSProp, or Adam. Another strategy is to change the architecture of the network to make it easier to train. One idea along these lines is batch normalization which was recently proposed by [3].\n",
@@ -23,12 +20,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "run the following from the cs231n directory and try again:\n",
+      "python setup.py build_ext --inplace\n",
+      "You may also need to restart your iPython kernel\n"
+     ]
+    }
+   ],
    "source": [
     "# As usual, a bit of setup\n",
     "from __future__ import print_function\n",
@@ -58,22 +61,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "X_train:  (49000, 3, 32, 32)\n",
+      "y_train:  (49000,)\n",
       "X_val:  (1000, 3, 32, 32)\n",
-      "y_test:  (1000,)\n",
-      "X_test:  (1000, 3, 32, 32)\n",
       "y_val:  (1000,)\n",
-      "y_train:  (49000,)\n"
+      "X_test:  (1000, 3, 32, 32)\n",
+      "y_test:  (1000,)\n"
      ]
     }
    ],
@@ -87,10 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Batch normalization: Forward\n",
     "In the file `cs231n/layers.py`, implement the batch normalization forward pass in the function `batchnorm_forward`. Once you have done so, run the following to test your implementation."
@@ -98,12 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -111,13 +103,13 @@
      "text": [
       "Before batch normalization:\n",
       "  means:  [ -2.3814598  -13.18038246   1.91780462]\n",
-      "  stds:  [ 27.18502186  34.21455511  37.68611762]\n",
+      "  stds:  [27.18502186 34.21455511 37.68611762]\n",
       "After batch normalization (gamma=1, beta=0)\n",
-      "  mean:  [  5.99520433e-17   6.93889390e-17   4.10782519e-17]\n",
-      "  std:  [ 0.99999999  1.          1.        ]\n",
+      "  mean:  [ 7.10542736e-17  7.82707232e-17 -7.42461648e-18]\n",
+      "  std:  [0.99999999 1.         1.        ]\n",
       "After batch normalization (nontrivial gamma, beta)\n",
-      "  means:  [ 11.  12.  13.]\n",
-      "  stds:  [ 0.99999999  1.99999999  2.99999999]\n"
+      "  means:  [11. 12. 13.]\n",
+      "  stds:  [0.99999999 1.99999999 2.99999999]\n"
      ]
     }
    ],
@@ -154,12 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -167,7 +155,7 @@
      "text": [
       "After batch normalization (test-time):\n",
       "  means:  [-0.03927354 -0.04349152 -0.10452688]\n",
-      "  stds:  [ 1.01531428  1.01238373  0.97819988]\n"
+      "  stds:  [1.01531428 1.01238373 0.97819988]\n"
      ]
     }
    ],
@@ -202,10 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Batch Normalization: backward\n",
     "Now implement the backward pass for batch normalization in the function `batchnorm_backward`.\n",
@@ -217,20 +202,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dx error:  1.66746048753e-09\n",
-      "dgamma error:  7.41722504069e-13\n",
-      "dbeta error:  2.37944694996e-12\n"
+      "dx error:  1.6674604875341426e-09\n",
+      "dgamma error:  7.417225040694815e-13\n",
+      "dbeta error:  2.379446949959628e-12\n"
      ]
     }
    ],
@@ -261,10 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Batch Normalization: alternative backward (OPTIONAL, +3 points extra credit)\n",
     "In class we talked about two different implementations for the sigmoid backward pass. One strategy is to write out a computation graph composed of simple operations and backprop through all intermediate values. Another strategy is to work out the derivatives on paper. For the sigmoid function, it turns out that you can derive a very simple formula for the backward pass by simplifying gradients on paper.\n",
@@ -276,23 +254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'float' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-57f7cde20045>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mt3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'dx difference: '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdx1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdx2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'dgamma difference: '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdgamma1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdgamma2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'dbeta difference: '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdbeta1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdbeta2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-1-249f81ca5e9d>\u001b[0m in \u001b[0;36mrel_error\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m   \u001b[1;34m\"\"\" returns relative error \"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m   \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmaximum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1e-8\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'float' and 'NoneType'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx difference:  9.890497291190823e-13\n",
+      "dgamma difference:  0.0\n",
+      "dbeta difference:  0.0\n",
+      "speedup: 1.89x\n"
      ]
     }
    ],
@@ -321,10 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Fully Connected Nets with Batch Normalization\n",
     "Now that you have a working implementation for batch normalization, go back to your `FullyConnectedNet` in the file `cs2312n/classifiers/fc_net.py`. Modify your implementation to add batch normalization.\n",
@@ -337,122 +306,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'1': 'a', '2': 'b'}\n",
-      "a\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'3'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-7b314322292c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'1'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 45\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'3'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     46\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: '3'"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"\"\"num_layers = 4\n",
-    "-----initailization------\n",
-    "i = 0 1 2 \n",
-    "W1, b1, gamma1, beta1\n",
-    "W2, b2, gamma2, beta2\n",
-    "W3, b3, gamma3, beta3\n",
-    "\n",
-    "//\n",
-    "W4, b4 define separately\n",
-    "\n",
-    "----forward pass-----\n",
-    "i = 0 1 2 3 \n",
-    "Z = W1, b1, gamma1, beta1\n",
-    "\n",
-    "Z = W2, b2, gamma2, beta2\n",
-    "\n",
-    "Z = W3, b3, gamma3, beta3\n",
-    "\n",
-    "Z = W4, b4\n",
-    "\n",
-    "-----loss, backward pass--\n",
-    "i = 0 1 2 3\n",
-    "\n",
-    "loss\n",
-    "\n",
-    "W4, b4, A3, Z3, gamma3, beta3\n",
-    "\n",
-    "dgamma3, dbeta3, dW4, db4\n",
-    "\n",
-    "W3, b3, A2, Z2, gamma2, beta2\n",
-    "\n",
-    "dgamma2, dbeta2, dW3, db3\n",
-    "\n",
-    "W2, b2, A1, Z1, gamma1, beta1\n",
-    "\n",
-    "dgamma1, dbeta1, dW2, db2\n",
-    "\n",
-    "W1, b1, \n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "a = {'1':'a' , '2':'b'}\n",
-    "print(a)\n",
-    "print(a['1'])\n",
-    "print(a['3'])\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Running check with reg =  0\n",
-      "Initial loss:  2.26119551013\n",
+      "Initial loss:  2.2611955101340957\n",
       "W1 relative error: 1.10e-04\n",
-      "W2 relative error: 2.85e-06\n",
-      "W3 relative error: 3.92e-10\n",
-      "b1 relative error: 2.22e-08\n",
+      "W2 relative error: 3.11e-06\n",
+      "W3 relative error: 4.05e-10\n",
+      "b1 relative error: 4.44e-08\n",
       "b2 relative error: 2.22e-08\n",
       "b3 relative error: 1.01e-10\n",
       "beta1 relative error: 7.33e-09\n",
       "beta2 relative error: 1.89e-09\n",
-      "gamma1 relative error: 7.47e-09\n",
+      "gamma1 relative error: 6.96e-09\n",
       "gamma2 relative error: 2.41e-09\n",
       "\n",
       "Running check with reg =  3.14\n",
-      "Initial loss:  6.99653322011\n",
+      "Initial loss:  6.996533220108303\n",
       "W1 relative error: 1.98e-06\n",
       "W2 relative error: 2.28e-06\n",
       "W3 relative error: 1.11e-08\n",
-      "b1 relative error: 2.78e-09\n",
+      "b1 relative error: 5.55e-09\n",
       "b2 relative error: 2.22e-08\n",
-      "b3 relative error: 2.23e-10\n",
+      "b3 relative error: 1.42e-10\n",
       "beta1 relative error: 6.65e-09\n",
-      "beta2 relative error: 5.69e-09\n",
-      "gamma1 relative error: 5.94e-09\n",
-      "gamma2 relative error: 4.14e-09\n"
+      "beta2 relative error: 3.48e-09\n",
+      "gamma1 relative error: 6.27e-09\n",
+      "gamma2 relative error: 5.28e-09\n"
      ]
     }
    ],
@@ -480,10 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Batchnorm for deep networks\n",
     "Run the following to train a six-layer network on a subset of 1000 training examples both with and without batch normalization."
@@ -492,11 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -569,10 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Run the following to visualize the results from two networks trained above. You should find that using batch normalization helps the network to converge much faster."
    ]
@@ -580,11 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -631,10 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Batch normalization and initialization\n",
     "We will now run a small experiment to study the interaction of batch normalization and weight initialization.\n",
@@ -645,11 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -763,11 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -827,10 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Question:\n",
     "Describe the results of this experiment, and try to give a reason why the experiment gave the results that it did."
@@ -838,10 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Answer:\n",
     "If the value of initialized weight Is smaller than zero point one, training wIth batch normalization outperform training without batch normalization on val, \n",
@@ -865,9 +719,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
